--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ div.top {
 
 .welcome {
   font-family: Cambria;
-  background-color: rgb(85, 26, 139);
+  background-color: #6ccff5;
   color: white;
 }
 
