--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,8 @@ div.column2 {
   width: 50%;
   float: left;
   border-radius: 25px;
+  border-style: solid;
+  border-width: 2px;
 }
 
 #description {
@@ -53,4 +55,11 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 75%;
+}
+
+.homeimg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
 }
